<resources>
    <string name="app_name">Github Client</string>
    <string name="repo_name">Nombre del repositorio</string>
    <string name="test_test">Esto es una prueba</string>
    <string name="repo_description">Descripción del Repositorio</string>
    <string name="repo_lang">Lenguaje</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Ingresar</string>

</resources>